--- a/src/Components/HW2/SuperButton.module.css
+++ b/src/Components/HW2/SuperButton.module.css
@@ -1,6 +1,6 @@
 .button {
-    width: 132px;
-    height: 30px;
+    width: 160px;
+    height: 50px;
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
@@ -9,7 +9,7 @@
 }
 
 .disabled {
-    background-color: #004D99;
+    background-color: #899f5d;
     opacity: 0.5;
     color: #212A34;
 }
@@ -22,7 +22,7 @@
 }
 
 .default {
-    background-color: #0066CC;
+    background-color: #65829f;
 }
 
 .red {
